--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vo-core",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
+    "memoizeProblems": "node memoize.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
