--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vo-core",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -25,5 +25,8 @@
     "got": "^12.3.1",
     "katex": "^0.16.0",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18"
   }
 }
