--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "types": "./dist/index.d.ts",
     "files": [
         "dist"
-     ],
+    ],
     "type": "module",
     "scripts": {
         "build": "tsup",
@@ -32,6 +32,8 @@
         "cheerio": "^1.0.0-rc.12",
         "got": "^12.3.1",
         "katex": "^0.16.0",
+        "node-fetch": "^3.3.2",
+        "playwright": "^1.55.1",
         "typescript": "^4.7.4"
     },
     "devDependencies": {
